# cryptoatlas

./: .gitignore  DISCLAIMER.md  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  pyproject.toml
cryptoatlas/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  run.sh
docs/: CASE_STUDIES.md
examples/: help.txt  sources.txt  stats.txt  version.txt
tests/: test_connect.py  test_deep.py  test_pii_and_scale.py  test_smoke.py  test_verify_graphml.py
