[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-cryptoatlas"
version = "0.1.1"
description = "Open, enriched dataset of PUBLIC crypto entities/addresses (exchanges, funds, ETFs, treasuries, governments, seizures, reserves, whales)"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["crypto", "dataset", "osint", "cognis-digital", "cognis-neural-suite", "public-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/cryptoatlas"

[project.scripts]
"cryptoatlas-emit" = "cryptoatlas.connect:emit_main"
cryptoatlas = "cryptoatlas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cryptoatlas"]

[tool.hatch.metadata]
allow-direct-references = true
